--- a/CampingPladsen/CampingProjekt.csproj
+++ b/CampingPladsen/CampingProjekt.csproj
@@ -78,6 +78,7 @@
     <Content Include="Pages\CreateUser.aspx" />
     <Content Include="Pages\Faciliteter.aspx" />
     <Content Include="Pages\LogIn.aspx" />
+    <Content Include="Pages\TestPage.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -129,6 +130,13 @@
     </Compile>
     <Compile Include="Pages\LogIn.aspx.designer.cs">
       <DependentUpon>LogIn.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\TestPage.aspx.cs">
+      <DependentUpon>TestPage.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Pages\TestPage.aspx.designer.cs">
+      <DependentUpon>TestPage.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
