--- a/CampingPladsen/CampingProjekt.csproj
+++ b/CampingPladsen/CampingProjekt.csproj
@@ -148,6 +148,7 @@
   <ItemGroup>
     <Content Include="MasterPage.Master" />
     <None Include="packages.config" />
+    <None Include="Properties\PublishProfiles\Default Settings.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
