--- a/CampingPladsen/CampingProjekt.csproj
+++ b/CampingPladsen/CampingProjekt.csproj
@@ -72,6 +72,8 @@
     <Content Include="CSS\MasterSS.css" />
     <Content Include="CSS\RootSS.css" />
     <Content Include="CSS\IndexSS.css" />
+    <Content Include="Images\Camping Picture Second Sunset.jpg" />
+    <Content Include="Images\Camping Picture Sunset.jpg" />
     <Content Include="Images\Camping picture.PNG" />
     <Content Include="Images\Camping picture2.PNG" />
     <Content Include="Index.aspx" />
